--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -3,7 +3,9 @@ $white: #fff;
 $lightgray: #F8F9FA;
 $font-black: #212E44;
 $blue: #5187E2;
+$blue-hover: #6796E6;
 $yellow: #FFCF53;
+$yellow-hover: #FFDB7E;
 $font-gray: #92A7B9;
 $toggle-active: #B6CDF2;
 $green: #54E251;
