--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,5 @@
+@import 'colors';
+
 // Typography
 h1 {
   font-size: 4rem; // 64px
@@ -25,5 +27,26 @@ p {
 
   &.light {
     font-weight: 300;
+  }
+}
+
+a {
+  font-size: 1rem; // 16px
+  font-weight: 300;
+  color: $blue;
+  text-decoration: none;
+
+  &:hover {
+    color: $blue-hover;
+  }
+
+  &.menulink {
+    font-size: 1rem; // 16px
+    font-weight: 400;
+    color: $font-black;
+
+    &:hover {
+      color: $blue;
+    }
   }
 }
