--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,5 @@
+@import 'breakpoints';
+
 // Global Settings
 
 *, *::after, *::before {
@@ -31,4 +33,20 @@ $border-radius-small: 12px;
 
 .cols {
   flex-direction: column;
+}
+
+.app-wrapper {
+  padding: 2.8rem 6.5rem 0;
+}
+
+@media (max-width: $screen-medium) {
+  .app-wrapper {
+    padding: 1.6rem 4rem 0;
+  }
+}
+
+@media (max-width: $screen-small) {
+  .app-wrapper {
+    padding: 1rem 2rem 0;
+  }
 }
