--- a/src/components/HeaderMenu/headermenu.module.scss
+++ b/src/components/HeaderMenu/headermenu.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/breakpoints';
+@import '../../styles/colors';
 @import '../../styles/global';
 
 .container {
@@ -12,6 +13,24 @@
   transition: $transition;
 }
 
+h1 {
+  max-width: 58rem;
+  text-align: center;
+  margin: auto;
+  padding-top: 4rem;
+
+  span {
+    
+    &.blue {
+      color: $blue;
+    }
+
+    &.yellow {
+      color: $yellow;
+    }
+  }
+}
+
 @media (max-width: $screen-small) {
   .container {
     flex-direction: column;
@@ -20,5 +39,9 @@
 
   .nav * {
     padding-left: 1.5rem;
+
+    &:nth-child(1){
+      padding-left: 0;
+    }
   }
 }
