mainpage header animations

--- a/src/components/MainpageHeader/mainpageheader.module.scss
+++ b/src/components/MainpageHeader/mainpageheader.module.scss
@@ -57,7 +57,14 @@
   }
 }
 
+@media (max-width: $screen-medium) {
+  .images {
+    padding-top: 2rem;
+  }
+}
+
 @media (max-width: $screen-small) {
+
   .container {
     background-image: none;
     background-color: $lightgray;
