--- a/src/components/MainpageHeader/mainpageheader.module.css
+++ b/src/components/MainpageHeader/mainpageheader.module.css
@@ -53,6 +53,11 @@
     visibility: hidden;
   }
 }
+@media (max-width: 880px) {
+  .images {
+    padding-top: 2rem;
+  }
+}
 @media (max-width: 680px) {
   .container {
     background-image: none;
