--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -6,11 +6,11 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem; // 48px
+  font-size: clamp(2rem, 3rem, 4rem); // 48px
 }
 
 h3 {
-  font-size: 2.25rem; // 36px
+  font-size: clamp(1.6rem, 2.25rem, 3rem); // 36px
 }
 
 h4 {
