--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -25,6 +25,7 @@ h1, h2, h3, h4 {
 p {
   font-size: 1rem; // 16px
   font-weight: 400;
+  color: $font-black;
 
   &.light {
     font-weight: 300;
