--- a/src/styles/config.css
+++ b/src/styles/config.css
@@ -62,6 +62,7 @@ h1, h2, h3, h4 {
 p {
   font-size: 1rem;
   font-weight: 400;
+  color: #212E44;
 }
 p.light {
   font-weight: 300;
@@ -89,4 +90,68 @@ a.menulink:hover {
   h1 {
     font-size: 2.5rem;
   }
+}
+*, *::after, *::before {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+ul, ol {
+  list-style: none;
+}
+
+html {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.flex {
+  display: flex;
+}
+
+.cols {
+  flex-direction: column;
+}
+
+.app-wrapper {
+  padding: 2.8rem 6.5rem 0;
+}
+
+@media (max-width: 880px) {
+  .app-wrapper {
+    padding: 1.6rem 4rem 0;
+  }
+}
+@media (max-width: 680px) {
+  .app-wrapper {
+    padding: 1rem 2rem 0;
+  }
+}
+button {
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #fff;
+  border: none;
+  padding: 0.625rem 2.5rem;
+  border-radius: 12px;
+  transition: ease-in-out 300ms;
+  cursor: pointer;
+}
+
+.btn {
+  background-color: #5187E2;
+}
+.btn:hover {
+  background-color: #6796E6;
+}
+
+.btn-alt {
+  background-color: #FFCF53;
+}
+.btn-alt:hover {
+  background-color: #FFDB7E;
 }/*# sourceMappingURL=config.css.map */
