services page full

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -11,6 +11,8 @@ $toggle-active: #B6CDF2;
 $green: #54E251;
 $red: #E25151;
 $darkgray: #EBEFF2;
+$disabled: #D4DAE0;
+$disabled-font: #AFBBC6;
 
 $shadow-light: 0px 2px 4px rgba(219, 219, 219, 0.25);
 $shadow-form: 0px 4px 4px rgba(219, 219, 219, 0.2);
