--- a/src/components/Utils/Footer/footer.module.scss
+++ b/src/components/Utils/Footer/footer.module.scss
@@ -1,6 +1,6 @@
-@import '../../styles/breakpoints';
-@import '../../styles/colors';
-@import '../../styles/global';
+@import '../../../styles/breakpoints';
+@import '../../../styles/colors';
+@import '../../../styles/global';
 
 .footer {
   border-top: 1px solid $darkgray;
