--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -53,8 +53,22 @@ a {
   }
 }
 
+@media (max-width: $screen-medium) {
+  h2 {
+    font-size: 2.5rem;
+  }
+}
+
 @media (max-width: $screen-small) {
   h1 {
     font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.6rem;
   }
 }
