--- a/src/components/MainPage/MainpageFeatures/mainpagefeatures.module.scss
+++ b/src/components/MainPage/MainpageFeatures/mainpagefeatures.module.scss
@@ -1,5 +1,5 @@
-@import '../../styles/breakpoints';
-@import '../../styles/colors';
+@import '../../../styles/breakpoints';
+@import '../../../styles/colors';
 
 .container {
   margin-top: 8rem;
