--- a/src/components/Utils/Header/headermenu.module.scss
+++ b/src/components/Utils/Header/headermenu.module.scss
@@ -1,6 +1,6 @@
-@import '../../styles/breakpoints';
-@import '../../styles/colors';
-@import '../../styles/global';
+@import '../../../styles/breakpoints';
+@import '../../../styles/colors';
+@import '../../../styles/global';
 
 .container {
   display: flex;
