--- a/src/styles/config.css
+++ b/src/styles/config.css
@@ -86,9 +86,22 @@ a.menulink:hover {
   color: #5187E2;
 }
 
+@media (max-width: 980px) {
+  h2 {
+    font-size: 2.5rem;
+  }
+}
 @media (max-width: 680px) {
   h1 {
     font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.6rem;
   }
 }
 *, *::after, *::before {
