--- a/src/components/FeaturesPage/FeaturesBlock/featuresblock.module.scss
+++ b/src/components/FeaturesPage/FeaturesBlock/featuresblock.module.scss
@@ -7,6 +7,7 @@
   padding-bottom: 20rem;
   background-image: url("/src/img/features-bg.svg");
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .items {
