--- a/src/components/MainPage/MainpageFeatures/mainpagefeatures.module.scss
+++ b/src/components/MainPage/MainpageFeatures/mainpagefeatures.module.scss
@@ -6,6 +6,7 @@
   padding-top: 10rem;
   background-image: url("/src/img/main-features-bg.svg");
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .items {
