--- a/src/components/ServicesPage/SupportBlock/supportblock.module.scss
+++ b/src/components/ServicesPage/SupportBlock/supportblock.module.scss
@@ -3,6 +3,7 @@
 .container {
   margin-top: 3rem;
   background-image: url('../../../img/services-bg.svg');
+  background-size: cover;
 
   h1 {
     padding: 12rem 1.5rem;
