--- a/src/components/MainPage/MainpageFeatures/mainpagefeatures.module.css
+++ b/src/components/MainPage/MainpageFeatures/mainpagefeatures.module.css
@@ -3,6 +3,7 @@
   padding-top: 10rem;
   background-image: url("/src/img/main-features-bg.svg");
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .items {
