--- a/src/components/PricingPage/TariffsSection/tariffssection.module.css
+++ b/src/components/PricingPage/TariffsSection/tariffssection.module.css
@@ -15,6 +15,18 @@ html {
   font-weight: 300;
 }
 
+.blue {
+  color: #5187E2;
+}
+
+.red {
+  color: #E25151;
+}
+
+.yellow {
+  color: #FFCF53;
+}
+
 .flex {
   display: flex;
 }
@@ -38,9 +50,35 @@ html {
   }
 }
 .container {
-  width: 1300px;
-  height: 700px;
-  margin: 4rem auto;
-  background-color: #92A7B9;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3rem auto;
   border-radius: 20px;
+}
+
+.toggle {
+  display: inline-block;
+  width: 430px;
+  height: 70px;
+  background-color: #EBEFF2;
+  border-radius: 20px;
+  margin-bottom: 4rem;
+}
+
+.items {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  justify-content: space-evenly;
+  padding-bottom: 5rem;
+}
+
+@media (max-width: 980px) {
+  .items {
+    width: auto;
+    flex-direction: column;
+    gap: 3rem;
+  }
 }/*# sourceMappingURL=tariffssection.module.css.map */
