--- a/src/components/PricingPage/TariffsSection/tariffssection.module.scss
+++ b/src/components/PricingPage/TariffsSection/tariffssection.module.scss
@@ -3,13 +3,35 @@
 @import '../../../styles/breakpoints';
 
 .container {
-  width: 1300px;
-  height: 700px;
-  margin: 4rem auto;
-  background-color: $font-gray;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3rem auto;
   border-radius: $border-radius;
 }
 
+.toggle {
+  display: inline-block;
+  width: 430px;
+  height: 70px;
+  background-color: $darkgray;
+  border-radius: $border-radius;
+  margin-bottom: 4rem;
+}
 
+.items {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  justify-content: space-evenly;
+  padding-bottom: 5rem;
+}
 
-
+@media (max-width: $screen-medium) {
+  .items {
+    width: auto;
+    flex-direction: column;
+    gap: 3rem;
+  }
+}
