--- a/src/styles/config.css
+++ b/src/styles/config.css
@@ -16,6 +16,18 @@ html {
   font-weight: 300;
 }
 
+.blue {
+  color: #5187E2;
+}
+
+.red {
+  color: #E25151;
+}
+
+.yellow {
+  color: #FFCF53;
+}
+
 .flex {
   display: flex;
 }
@@ -119,6 +131,18 @@ html {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
   font-weight: 300;
+}
+
+.blue {
+  color: #5187E2;
+}
+
+.red {
+  color: #E25151;
+}
+
+.yellow {
+  color: #FFCF53;
 }
 
 .flex {
