tariff helper redux complete

--- a/src/components/MainPage/TariffHelper/tariffhelper.module.scss
+++ b/src/components/MainPage/TariffHelper/tariffhelper.module.scss
@@ -27,13 +27,45 @@
 
   .card {
     display: flex;
-    align-items: center;
+    gap: 6rem;
   }
   
   .form {
     background-color: $lightgray;
-    width: 780px;
-    height: 380px;
     border-radius: $border-radius;
+    box-shadow: $shadow-form;
+    padding: 2rem;
+    min-height: 23rem;
+  }
+}
+
+.questions {
+  padding-top: 2rem;
+  transition: $transition;
+
+  p {
+    color: $font-black;
+    text-align: left;
+    padding-bottom: 2rem;
+  }
+}
+
+.buttons {
+  display: flex;
+  gap: 2rem;
+}
+
+@media(max-width: $screen-medium) {
+  .card {
+    gap: 2.5rem;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media(max-width: $screen-small) {
+  .buttons {
+    flex-direction: column;
+    align-items: center;
   }
 }
