--- a/src/styles/_inputs.scss
+++ b/src/styles/_inputs.scss
@@ -69,6 +69,33 @@ body::-webkit-scrollbar-thumb {
   border-radius: $border-radius-small;
 }
 
+select {
+  appearance: none;
+  font-family: 'Poppins';
+  font-size: 1rem;
+  font-weight: 300;
+  border: none;
+  color: $blue;
+  background-color: transparent;
+  border-bottom: 2px solid $toggle-active;
+  background-image: url('../img/icon-dropdown.svg');
+  background-repeat: no-repeat;
+  background-position: 98% center;
+  padding: 0 1.5rem 2px 0.5rem;
+  transition: $transition;
+  cursor: pointer;
+
+  &:focus {
+    outline: none;
+    background-image: url('../img/icon-dropup.svg');    
+  }
+
+  option {
+    color: $font-black;
+  } 
+}
+
+
 @media (max-width: $screen-small) {
   input {
     width: 18rem;
