--- a/src/components/MainPage/TariffHelper/tariffhelper.module.css
+++ b/src/components/MainPage/TariffHelper/tariffhelper.module.css
@@ -71,11 +71,41 @@ html {
 }
 .container .card {
   display: flex;
-  align-items: center;
+  gap: 6rem;
 }
 .container .form {
   background-color: #F8F9FA;
-  width: 780px;
-  height: 380px;
   border-radius: 20px;
+  box-shadow: 0px 4px 4px rgba(219, 219, 219, 0.2);
+  padding: 2rem;
+  min-height: 23rem;
+}
+
+.questions {
+  padding-top: 2rem;
+  transition: ease-in-out 300ms;
+}
+.questions p {
+  color: #212E44;
+  text-align: left;
+  padding-bottom: 2rem;
+}
+
+.buttons {
+  display: flex;
+  gap: 2rem;
+}
+
+@media (max-width: 980px) {
+  .card {
+    gap: 2.5rem;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media (max-width: 680px) {
+  .buttons {
+    flex-direction: column;
+    align-items: center;
+  }
 }/*# sourceMappingURL=tariffhelper.module.css.map */
