pricing page full

--- a/src/components/PricingPage/TariffsSection/tariffssection.module.css
+++ b/src/components/PricingPage/TariffsSection/tariffssection.module.css
@@ -57,21 +57,13 @@ html {
   border-radius: 20px;
 }
 
-.toggle {
-  display: inline-block;
-  width: 430px;
-  height: 70px;
-  background-color: #EBEFF2;
-  border-radius: 20px;
-  margin-bottom: 4rem;
-}
-
 .items {
   width: 80%;
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem;
   justify-content: space-evenly;
+  margin-top: 4rem;
   padding-bottom: 5rem;
 }
 
