pricing header title fix

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -14,7 +14,7 @@ ul, ol {
 
 html {
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: '', sans-serif;
   font-size: 16px;
   font-weight: 300;
 }
